# inkstave

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  justfile  pnpm-lock.yaml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260609_1531_d1d4079342b4_create_pings.py  20260609_1607_2672f3100dca_create_users.py  20260609_1709_feb8f5c76b1a_create_projects.py  20260609_1722_8b301674ef53_create_tree_entities.py  20260609_1732_bec8287c4664_create_documents.py  20260609_1748_be53747ebcf5_create_files.py  20260609_2117_af1f233e2334_create_compiles.py  20260609_2138_df0daad1ac8d_create_compile_outputs.py  20260609_2310_b7c4e9d21f08_create_crdt_tables.py  20260610_0010_a1c2e3f40915_create_sharing_tables.py  20260610_0900_c3d5f7a91b24_create_history_tables.py  20260610_1100_d4e6a8b02c35_create_history_labels.py  20260610_1300_e5f7b9c13d46_create_notifications.py  20260610_1500_f6a8c2d24e57_history_payload_xor_checks.py  20260610_1700_a7b9d3e35f68_create_agent_tables.py  20260610_1844_fda790a9deeb_user_settings_avatar_editor_preferences_.py  20260610_1900_b8c1d5f47a69_create_proposed_diffs.py  20260610_2100_c9d2e6f58b71_agent_session_run_state.py  20260610_2300_d1e3f7a69c82_create_agent_audit_log.py  20260612_1000_e2f4a8b13c90_create_project_imports.py  20260612_1200_a3c7e9d21f44_create_auth_tokens.py
backend/scripts/: agent_live_smoke.py  check_test_budget.py  e2e_reset_db.py  export_openapi.py
backend/src/inkstave/: __init__.py  app.py  cache.py  cli.py  config.py  config_groups.py  dependencies.py  errors.py  exception_handlers.py  logging.py  main.py  middleware.py  redis_client.py  time.py
backend/src/inkstave/agent/: __init__.py  dependencies.py  deps.py  edits.py  graph.py  models.py  nodes.py  prompts.py  repository.py  runner.py  settings.py  state.py
backend/src/inkstave/api/: __init__.py  router.py
backend/src/inkstave/auth/: __init__.py  dependencies.py  password.py  rate_limit.py  refresh_store.py  tokens.py
backend/src/inkstave/authorization/: __init__.py  capabilities.py  dependencies.py  service.py
backend/src/inkstave/bootstrap/: __init__.py  admin.py  config_check.py  migrate.py  seed.py
backend/src/inkstave/collab/: __init__.py  awareness.py  content_bridge.py  flush.py  manager.py  protocol.py  state.py  store.py  ydocument.py
backend/src/inkstave/compile/: __init__.py  coordinator.py  enqueuer.py  errors.py  jobs.py  limits.py  output_repository.py  outputs.py  packages.py  repository.py  result.py  retention.py  runner.py  service.py  sources.py  stream.py  workdir.py  worker.py
backend/src/inkstave/db/: __init__.py  base.py  engine.py  session.py
backend/src/inkstave/history/: __init__.py  capture.py  diff.py  jobs.py  labels.py  read.py  reconstruct.py  restore.py
backend/src/inkstave/logparse/: __init__.py  latex_log_parser.py  models.py  router.py  service.py
backend/src/inkstave/mailer/: __init__.py  enqueuer.py  jobs.py  sender.py  templates.py
backend/src/inkstave/notifications/: __init__.py  invite_hook.py  jobs.py  service.py
backend/src/inkstave/observability/: __init__.py  context.py  log.py  metrics.py  middleware.py  tracing.py
backend/src/inkstave/schemas/: __init__.py  auth.py  base.py  compile.py  document.py  file.py  history.py  notification.py  project.py  project_import.py  sharing.py  tree.py  user.py
backend/src/inkstave/security/: __init__.py  body_limit.py  headers.py  rate_limit.py  uploads.py
backend/src/inkstave/services/: __init__.py  account.py  (+22 more)
backend/tests/: collab_ws_harness.py  conftest.py  logparse_fixtures.py  synctex_fixtures.py
backend/tests/agent_evals/: test_agent_evals.py
backend/tests/factories/: __init__.py  ping.py  user.py
backend/tests/fixtures/: __init__.py  database.py  env.py  fakes.py  paths.py  services.py
backend/tests/integration/: _agent_api_support.py  _agent_tools_support.py  _compile_job_support.py  _compile_outputs_support.py  _files_api_support.py  _history_api_support.py  _sharing_api_support.py  _tree_api_support.py  test_access_control_api.py  test_account_api_59.py  test_agent_api.py  test_agent_api_sse.py  test_agent_api_streaming.py  test_agent_diffs.py  test_agent_runner.py  test_agent_safety_api.py  test_agent_tools.py  test_agent_tools_authz.py  test_agent_tools_graph.py  test_app.py  test_auth.py  test_authz_guard_coverage.py  test_bootstrap_57.py  test_cli.py  test_collab_manager.py  test_collab_refactor.py  test_collab_store.py  test_collab_ws_access.py  test_collab_ws_api.py  test_collab_ws_refactor.py  test_compile_api.py  test_compile_integration.py  test_compile_job.py  test_compile_job_cancel.py  test_compile_job_workdir.py  test_compile_output_api.py  test_compile_outputs.py  test_compile_outputs_jobs.py  test_compile_outputs_retention.py  test_db_session.py  (+47 more)
backend/tests/smoke/: test_real_compile.py
backend/tests/unit/: _clock.py  test_account_service_59.py  test_agent_audit_cleanup_49.py  test_agent_context.py  test_agent_core.py  test_agent_diffs_unit.py  test_agent_egress_lock.py  test_agent_events.py  test_agent_llm.py  test_agent_safety.py  test_agent_tools_unit.py  test_async_offload_93.py  test_auth_logging_92.py  test_auth_tokens_104.py  test_authz_matrix.py  test_bootstrap_57.py  test_clock_injection_94.py  test_collab_awareness.py  test_collab_protocol.py  test_collab_ws_auth_logging_92.py  test_collab_ws_dispatch.py  test_collab_ws_redis.py  test_collab_ws_rooms.py  test_collab_ydocument.py  test_compile_coordinator.py  test_compile_daily_quota.py  test_compile_outputs_unit.py  test_compile_packages.py  test_compile_runner.py  test_compile_sandbox_runner.py  test_compile_service.py  test_compile_speed_guard.py  test_compile_workdir.py  test_config.py  test_config_validation_62.py  test_db_layer.py  test_dependencies.py  test_docker_packaging.py  test_docs.py  test_doctor_62.py  (+41 more)
(+743 files in other folders)
